--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")
 
 set(SOURCE_FILES main.cpp network/ConnectionHandler.cpp network/ConnectionHandler.h
         network/ClientHandler.cpp network/ClientHandler.h
-        local/CommandParser.cpp local/CommandParser.h)
+        local/CommandParser.cpp local/CommandParser.h
+        local/DBOperator.cpp local/DBOperator.h)
 add_executable(Server ${SOURCE_FILES})
 
 include_directories(/home/alin/Part2Part/shared/include)
@@ -14,4 +15,5 @@ target_link_libraries(Server ${CMAKE_INCLUDE_PATH}/bin/Debug/libIOWrappers.a
         ${CMAKE_INCLUDE_PATH}/bin/Debug/libCommands.a
         ${CMAKE_INCLUDE_PATH}/bin/Debug/libFileDescription.a
         ${CMAKE_INCLUDE_PATH}/bin/Debug/libIntegrityChecker.a
-        ${CMAKE_INCLUDE_PATH}/bin/Debug/libNetworkWrappers.a)
+        ${CMAKE_INCLUDE_PATH}/bin/Debug/libNetworkWrappers.a
+        ${CMAKE_INCLUDE_PATH}/bin/Debug/libAddress.a)
